# recipe-wizard

./: .gitignore  test.py
back/: app.py  ingredients.txt  receipt_detection.py  requirements.txt
back/static/: index.html  questions.html  style.css
back/templates/: detail.html  index.html  questions.html  recipe.html
crawl/: CMakeLists.txt  config.cpp  config.h  converter.py  data.json  extractor.py  ingredient_parser.py  ingredients.txt  main.cpp  output-parsed.txt  output.txt  saver.py  scraper.py
model/ner/: cfg  lower_model  moves  upper_model
model/vocab/: strings.json
skrejper/: allIngredients.txt  output.txt  parse-recipes.py  unlabeledIngredients.txt  unlabeledRecipes.txt
trainer/: trainer.py
